Fixed: scrollbar no longer offsets flex widths, documentation deps fixed

--- a/src/index.styl
+++ b/src/index.styl
@@ -21,6 +21,7 @@ $expandSize = 7px
   .rt-thead
     flex: 1 0 auto
     display: flex
+    overflow-y: scroll
     flex-direction: column
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -98,7 +99,7 @@ $expandSize = 7px
     flex: 99999 1 auto
     display: flex
     flex-direction: column
-    overflow: auto
+    overflow: scroll
     // z-index:0
     .rt-tr-group
       border-bottom: solid 1px alpha(black, .05)
